建立读取/存储配置信息的机制，使用app.config存储配置信息。 把PageFetcher里硬编码的一些配置项目移动到配置文件。

--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -112,6 +112,10 @@
     <Compile Include="CommonLib\Revision.cs" />
     <Compile Include="CommonLib\ThreadHeader.cs" />
     <Compile Include="ComponentFactory.cs" />
+    <Compile Include="Configuration\ConfigurationManager.cs" />
+    <Compile Include="Configuration\IConfiguration.cs" />
+    <Compile Include="Configuration\PageFetcherConfigElement.cs" />
+    <Compile Include="Configuration\TGFCSpidermanSection.cs" />
     <Compile Include="IoC\IoCContainer.cs" />
     <Compile Include="IPageFetcher.cs" />
     <Compile Include="IPageProcessor.cs" />
