把用户名和密码保存到app.config中，避免每次运行都要询问用户。

--- a/console/TGFCSpiderman/App.config
+++ b/console/TGFCSpiderman/App.config
@@ -3,9 +3,8 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="tgfc" type="taiyuanhitech.TGFCSpiderman.Configuration.TGFCSpidermanSection, TGFCSpiderman, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -37,4 +36,7 @@
   <connectionStrings>
     <add name="TgfcDbContext" connectionString="Data Source=.\tgfc.sqlite" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
+  <tgfc>
+    <pageFetcher signinRetryTimes="3" timeout="20" user-agent="Opera/9.80 (Windows NT 5.1) Presto/2.12.388 Version/12.16" />
+  </tgfc>
 </configuration>
