为实现获取帖子评分添加测试用例。

--- a/console/UnitTest/UnitTest.csproj
+++ b/console/UnitTest/UnitTest.csproj
@@ -128,6 +128,18 @@
     <Content Include="HtmlContents\AnonymousInReplies.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="HtmlContents\FirstPostNegativeOnly.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="HtmlContents\FirstPostPositiveEqualsNegative.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="HtmlContents\FirstPostPositiveLessThenNegative.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="HtmlContents\FirstPostPositiveOnly.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="HtmlContents\ForumPageFirst.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
