--- a/console/UnitTest/packages.config
+++ b/console/UnitTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
