--- a/console/TGFCSpiderman/NLog.config
+++ b/console/TGFCSpiderman/NLog.config
@@ -9,6 +9,7 @@
   <targets>
     <!-- add your targets here -->
     <target name="logfile" xsi:type="File" fileName="log.txt" />
+    <target name="console" xsi:type="Console" />
     <!--
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
@@ -17,7 +18,8 @@
 
   <rules>
     <!-- add your logging rules here -->
-    <logger name="*" minlevel="Info" writeTo="logfile" />
+    <logger name="*" minlevel="Trace" writeTo="logfile" />
+    <logger name="*" minlevel="Info" writeTo="console" />
     <!--
     <logger name="*" minlevel="Trace" writeTo="f" />
     -->
