--- a/console/UnitTest/UnitTest.csproj
+++ b/console/UnitTest/UnitTest.csproj
@@ -117,6 +117,9 @@
     <Content Include="HtmlContents\AnonymousInReplies.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="HtmlContents\Closed.htm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="HtmlContents\FirstPostNegativeOnly.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
