重构。主要改动： 1、使用新的运行模式，获取网页和处理网页放在一个线程中执行，提升性能，方便报告进度、取消。 由于不能太频繁地发送http请求，这个线程大部分时间将是空闲的，空闲时间正好处理网页。 2、使用.net framework提供的BlockCollection替代原来自行实现的类似结构。

--- a/console/TGFCSpidermanX/App.config
+++ b/console/TGFCSpidermanX/App.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -17,9 +16,7 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
-      <add name="SQLite Data Provider" invariant="System.Data.SQLite.EF6"
-           description=".Net Framework Data Provider for SQLite"
-           type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite.EF6" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
     </DbProviderFactories>
   </system.data>
   <entityFramework>
