实现以下功能： 1、在任务运行的任何时候都可以取消。 2、任务运行的时候保存当前进度（主要是当前主题列表页的页码），退出系统后下次进入可继续运行。

--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -97,6 +97,7 @@
     <Compile Include="CommonLib\Post.cs" />
     <Compile Include="CommonLib\ForumThread.cs" />
     <Compile Include="CommonLib\Revision.cs" />
+    <Compile Include="CommonLib\RunningInfo.cs" />
     <Compile Include="CommonLib\ThreadHeader.cs" />
     <Compile Include="ComponentFactory.cs" />
     <Compile Include="Configuration\AuthConfigElement.cs" />
@@ -113,7 +114,9 @@
     <Compile Include="MillPageHelper.cs" />
     <Compile Include="PageFetcher.cs" />
     <Compile Include="PageProcessor.cs" />
+    <Compile Include="Persistence\IRunningInfoRepository.cs" />
     <Compile Include="Persistence\PostRepository.cs" />
+    <Compile Include="Persistence\RunningInfoRepository.cs" />
     <Compile Include="Persistence\TgfcDbContext.cs" />
     <Compile Include="JobQueue\JobRunner.cs" />
     <Compile Include="Program.cs" />
