--- a/console/TGFCSpidermanX/packages.config
+++ b/console/TGFCSpidermanX/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net45" />
+  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.94.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
