添加搜索界面，能显示简单结果。

--- a/console/TGFCSpidermanX/TGFCSpidermanX.csproj
+++ b/console/TGFCSpidermanX/TGFCSpidermanX.csproj
@@ -94,6 +94,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModel\Dashboard.cs" />
+    <Compile Include="ViewModel\SearchViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
