用Sqlite-net替换sqlite官方System.Data.Sqlite，因为它性能不佳。 由于sqlite2.dll官方只提供x86版本，所以把TGFCSpiderman也改为x86架构。

--- a/console/TGFCSpiderman/packages.config
+++ b/console/TGFCSpiderman/packages.config
@@ -6,6 +6,7 @@
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
   <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.94.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
