删除原console app TGFCSpiderman 将wpf实现的TGFCSpidermanX改为TGFCSpiderman.

--- a/console/TGFCSpiderman/App.config
+++ b/console/TGFCSpiderman/App.config
@@ -2,7 +2,7 @@
 
 <configuration>
   <configSections>
-    <section name="tgfc" type="taiyuanhitech.TGFCSpiderman.Configuration.TGFCSpidermanSection, TGFCSpiderman, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+    <section name="tgfc" type="taiyuanhitech.TGFCSpiderman.Configuration.TGFCSpidermanSection, TGFCSpiderman" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
