--- a/console/TGFCSpiderman/packages.config
+++ b/console/TGFCSpiderman/packages.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net45" />
   <package id="NLog" version="3.1.0.0" targetFramework="net45" />
-  <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
-  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="sqlite-net" version="1.0.8" targetFramework="net45" />
 </packages>
