搜索结果绑定正确的url，点击“打开”按钮用浏览器打开论坛。

--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Configuration\PageFetcherConfigElement.cs" />
     <Compile Include="Configuration\TGFCSpidermanSection.cs" />
     <Compile Include="Converter\PostTitleConverter.cs" />
+    <Compile Include="Converter\PostUriConverter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IoC\IoCContainer.cs" />
     <Compile Include="IPageFetcher.cs" />
