--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Configuration\TGFCSpidermanSection.cs" />
     <Compile Include="Converter\PostTitleConverter.cs" />
     <Compile Include="Converter\PostUriConverter.cs" />
+    <Compile Include="Converter\ScrubHtmlConverter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IoC\IoCContainer.cs" />
     <Compile Include="IPageFetcher.cs" />
