搜索界面添加两个控件，一是排序选项，二是搜主题时用的最后回复时间。

--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Configuration\IConfiguration.cs" />
     <Compile Include="Configuration\PageFetcherConfigElement.cs" />
     <Compile Include="Configuration\TGFCSpidermanSection.cs" />
+    <Compile Include="Converter\Bool2VisibilityConverter.cs" />
     <Compile Include="Converter\PostTitleConverter.cs" />
     <Compile Include="Converter\PostUriConverter.cs" />
     <Compile Include="Converter\ScrubHtmlConverter.cs" />
