--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Converter\PostTitleConverter.cs" />
     <Compile Include="Converter\PostUriConverter.cs" />
     <Compile Include="Converter\ScrubHtmlConverter.cs" />
+    <Compile Include="Converter\SortOrderItemSourceConverter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IoC\IoCContainer.cs" />
     <Compile Include="IPageFetcher.cs" />
