--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -113,7 +113,7 @@
     <Compile Include="SQLiteAsync.cs" />
     <Compile Include="TaskQueueManager.cs" />
     <Compile Include="ViewModel\Dashboard.cs" />
-    <Compile Include="ViewModel\SearchViewModel.cs" />
+    <Compile Include="CommonLib\SearchDescriptor.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
