--- a/console/TGFCSpiderman/TGFCSpiderman.csproj
+++ b/console/TGFCSpiderman/TGFCSpiderman.csproj
@@ -38,8 +38,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>true</Prefer32Bit>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>t.ico</ApplicationIcon>
@@ -94,6 +95,7 @@
     <Compile Include="Configuration\IConfiguration.cs" />
     <Compile Include="Configuration\OnlineUpdateConfigElement.cs" />
     <Compile Include="Configuration\PageFetcherConfigElement.cs" />
+    <Compile Include="Configuration\PendingUpdateElement.cs" />
     <Compile Include="Configuration\TGFCSpidermanSection.cs" />
     <Compile Include="Converter\Bool2VisibilityConverter.cs" />
     <Compile Include="Converter\PostTitleConverter.cs" />
